# databricks-ml-intern

./: .env.example  .gitignore  CLAUDE.md  app.yaml  databricks.yml  pyproject.toml
agent/: config.py  main.py
agent/context_manager/: manager.py
agent/core/: agent_loop.py  approval_policy.py  cost_estimation.py  db_client.py  doom_loop.py  llm_params.py  model_catalog.py  model_switcher.py  prompt_registry.py  session.py  session_resume.py  telemetry.py  tools.py  tracing.py
agent/prompts/: system_prompt_v3.yaml
agent/skills/: __init__.py  loader.py
agent/skills/kaggle-tabular-classification/: playbook.md  skill.yaml
agent/tools/: __init__.py  databricks_jobs_tool.py  databricks_sandbox.py  hf_to_uc_tool.py  papers_tool.py  plan_tool.py  read_skill_tool.py  repos_tool.py  research_tool.py  sandbox_tool.py  uc_dataset_tools.py  uc_model_tools.py  uc_volume_tools.py
agent/utils/: terminal_display.py
backend/: dependencies.py  lakebase.py  main.py  models.py  session_manager.py  start.sh  uc_volume_uploads.py
backend/routes/: agent.py  auth.py
configs/: main_agent_config.json
examples/kaggle-f1-pitstops-s6e5/: README.md
examples/kaggle-f1-pitstops-s6e5/artifacts/: leaderboard-snapshot.csv  (+1 more)
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: theme.ts
resources/: eval_job.yml  lakebase.yml  lakeview_dashboard.yml.disabled  prompt_register_job.yml
scripts/: bootstrap_pool.py  eval_model.py  register_prompt.py  wire_eval_trigger.py
tests/integration/: conftest.py  test_finetune_smoke.py  test_live_thinking_models.py  test_workspace_smoke.py
tests/unit/: test_auth.py  test_auto_approval_policy.py  test_cli_rendering.py  test_compaction_loop_break.py  test_cost_estimation.py  test_databricks_jobs_tool.py  test_databricks_sandbox.py  test_db_client.py  test_doom_loop.py  test_lakebase.py  test_model_catalog.py  test_prompt_registry.py  test_session_resume.py  test_skills.py  test_submit_request_cap.py  test_thinking_history.py  test_tracing.py  test_uc_tools.py  test_uc_volume_uploads.py
(+15 files in other folders)
