[project]
name = "databricks-ml-intern"
version = "0.1.0"
description = "Autonomous ML-engineering agent for the Databricks AI runtime. Fine-tunes models and LLMs via Mosaic AI Model Training, Databricks Jobs, Unity Catalog, and MLflow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "requests>=2.33.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "thefuzz>=0.22.1",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "whoosh>=2.7.4",

    # LLM
    "litellm>=1.83.0",

    # Databricks
    "databricks-sdk>=0.40.0",
    "databricks-sql-connector>=3.5.0",
    "mlflow[databricks]>=2.19.0",

    # Lakebase (Postgres)
    "psycopg[binary,pool]>=3.2.0",
    "sqlalchemy>=2.0.0",

    # HF research tools (papers, docs, github search). Kept — orthogonal to infra.
    "huggingface-hub>=1.0.1",

    # MCP
    "fastmcp>=3.2.0",

    # Web backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
]

[project.optional-dependencies]

eval = [
    "inspect-ai>=0.3.149",
    "pandas>=2.3.3",
    "tenacity>=8.0.0",
]

dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
]

# NOTE: databricks-genai (Mosaic AI Model Training SDK) is intentionally
# NOT a dependency. Its pins (databricks-sdk==0.29, mlflow<=2.16.2) force
# incompatible downgrades across the rest of the stack. P2 will call the
# Mosaic AI Model Training REST API directly through databricks-sdk's
# ApiClient. The endpoint surface is small and stable enough that the
# SDK wrapper isn't worth the dependency cost.

# Optional: local PySpark against serverless
connect = [
    "databricks-connect>=15.4.0",
]

all = [
    "databricks-ml-intern[eval,dev,connect]",
]

[project.scripts]
databricks-ml-intern = "agent.main:cli"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.uv]
package = true
